# archiweb

./: README.md
browser_plugin/: background.js  manifest.json
browser_plugin/icons/: icon-96.xcf
browser_plugin/options/: main.html  main.js
browser_plugin/popup/: main.html  main.js
docs/: generate.py
docs/graphviz/: dataflow.dot
processor/: Cargo.toml  Rocket.toml
processor/src/: main.rs
